# nih_to_mne

./: .gitmodules  MANIFEST.in  README.md  makefile  pyproject.toml  setup.py
.github/workflows/: nih2mne-actions.yml  try_at_github-actions.yml
cmdline/: make_bids_fs_swarm.sh  megcore_make_lcmv.py  plot_vol2surf.py
container/: DockerFile  README.md
nih2mne/: __init__.py  bids_mne_preproc_mri.py  bids_to_mnetrans.py  bsight_to_mnetrans.py  bstags.py  calc_mnetrans.py  config.py  eyetracking_preprocessing.py  make_meg_bids.py  make_meg_bids_gui.py  make_mri_json.py  megcore_prep_mri_bids.py
nih2mne/GUI/: beamformer_form_entries.py  beamformer_maker.py  beamformer_maker2.ui  dataset_gui.py  make_meg_bids_gui.py  megcore_gui.py  qa_bids_gui.py  qt_gui.py  qt_mri_viewer.py  tmp_mri_viewer.py  trigger_code_gui.py  trigger_code_gui2.py
nih2mne/GUI/templates/: BIDS_creator_gui.py  BIDS_creator_gui.ui  BIDS_creator_gui_reformat.py  BIDS_creator_gui_reformat.ui  bids_creator_gui_control_functions.py  file_staging_gui.py  file_staging_gui_integrateMOD.py  file_staging_meg.ui  input_error_dset_tile_listWidgetBase.py  input_error_dset_tile_listWidgetBase.ui  input_meg_dset_tile.py  input_meg_dset_tile.ui  input_meg_dset_tile_listWidgetBase.py  input_meg_dset_tile_listWidgetBase.ui  parse_marks_single_line.py  parse_marks_single_line.ui  test_file_staging_meg.py  trigger_processing_gui.py  trigger_processing_gui.ui  trigger_single_line.py  trigger_single_line.ui
nih2mne/GUI/templates/OLDvers/: BIDS_creator_gui.py
nih2mne/GUI/tests/: test_beamformer_form_entries.py  test_qt_gui.py  test_trigger_code_gui.py  trigger_code_gui_test.py  trigger_code_gui_test_notImpl.py
nih2mne/dataQA/: README.md  bids_project_interface.py  config_template.yml  qa_config_reader.py  run_qa_analysis.py
nih2mne/proc/: beamformer_template.py  beamformer_templateORIG.py
nih2mne/templates/: MarkerFile.mrk  bids_entry_template.csv
nih2mne/tests/: Exported_Electrodes.txt  alt_ExportedElectrodes.txt  bsight_target_file.txt  bsight_test_bad_coordsys.txt  bsight_test_updated_good_coordsys.txt  eroom_mne_info.fif  test_bstags.py  test_calc_mne_trans.py  test_config.py  test_make_meg_bids.py  test_new_make_bids_interface.py  test_txt.tag  test_txt.txt  tmp_test_make_meg_bids.py
nih2mne/tests/calc_mne_trans_testfiles/: README.txt  s1+orig.HEAD  s1.tag  s1.txt  s1_mod.tag  s2+orig.HEAD
nih2mne/tests/tests_dataQA/: test_qa_scripts.py
nih2mne/utilities/: anonymize_meg.py  anonymize_meg_README.md  anonymize_meg_derivatives.py  bids_helpers.py  calc_hm.py  calc_run_hm.py  clear_mrk_path.py  data_crop_wrapper.py  emptyroom_utilities.py  extract_csv_bids_entries.py  extract_label_data.py  eyelink_meg_adjustments.py  fix_dsname.py  make_QA_psd.py  make_meg_bids_fromcsv.py  markerfile_write.py  montages.py  mri_defacing.py  print_bids_table.py  qa_fids.py  standardize_eventID_list.py  trigger_utilities.py  trigger_valid.py
nih2mne/utilities/tests/: test_data_crop.py  test_entry.csv  test_extract_csv_entries.py  test_initial_trigger_flanker_dframe.csv  test_make_meg_bids_fromcsv.py  test_projCorrected_flanker_dframe.csv  test_trigger_utilities.py
