[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nih2mne"
description = "General integration functions for mne and mne-bids for NIH users"
readme = "README.md"
requires-python = "<3.12"
#keywords = ["one", "two"]

authors = [
  { name="Jeff Stout", email="stoutjd@nih.gov" },
]

license = {text = "UNLICENSE"}
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: UNLICENSE",
        "Operating System :: Linux/Unix",
    ]
dependencies = [
'mne<1.6', 'numpy<2.0', 'pytest', 'joblib', 'nibabel','mne_bids','pandas', 'wget','nilearn', 'pysimplegui-4-foss', 'pyyaml', 'pyqtgraph',
'pyctf@git+https://github.com/nih-megcore/pyctf-lite' , 'dill', 'PyQt5'
]
dynamic = ["version"]

[project.optional-dependencies]
testing = ['datalad','pytest','pygit2']

[project.scripts]
"bstags.py"='nih2mne.bstags:main'
"calc_mnetrans.py"='nih2mne.calc_mnetrans:main'
"make_meg_bids.py"='nih2mne.make_meg_bids:main'
"make_meg_bids_fromcsv.py" = 'nih2mne.utilities.make_meg_bids_fromcsv:main'
"print_bids_table.py"='nih2mne.utilities.print_bids_table:main'
"fix_dsname.py"='nih2mne.utilities.fix_dsname:main'
"megcore_prep_mri_bids.py"='nih2mne.megcore_prep_mri_bids:main'
"qa_fids.py"='nih2mne.utilities.qa_fids:main'
"standardize_eventID_list.py"='nih2mne.utilities.standardize_eventID_list:main_parser'
"megcore_gui.py"='nih2mne.GUI.megcore_gui:meg_gui'
"bids_qa_gui.py"='nih2mne.GUI.qt_gui:cmdline_main'
"trigger_code_gui.py"='nih2mne.GUI.trigger_code_gui:cmdline_main'
"calc_hm.py"='nih2mne.utilities.calc_hm:entrypoint'

[tool.setuptools.packages.find]
include = ["nih2mne*"]
#exclude = ["extras*", "conda*"]
